2002-04-19  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-parser.c: New implementation, backported from my glib2
	version of gmime (which is still a work-in-progress).

	* old-parser.c: Old version of gmime-parser.c - keeping it around
	in for reference.
	
	* gmime-utils.c (g_mime_utils_header_fold): If we find a \t, that
	is a good place to wrap since odds are that this is where the
	previous mailer had wrapped the header.

2002-04-19  Jeffrey Stedfast  <fejj@ximian.com>

	* pan-mime-parser.c (g_mime_parser_construct_message): No longer
	takes a 'preserve_headers' argument.

	* gmime-parser.c (g_mime_parser_construct_message): No longer
	takes a 'preserve_headers' argument.

2002-04-18  Jeffrey Stedfast  <fejj@ximian.com>

	* docs/*: Updated.

	* configure.in: Add $srcdir to the include path so it catches
	iconv-detect.h.

2002-04-14  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-utils.c (datetok): Treat ',' as a token delimeter. Also
	updated the datetok lookup table.

	* configure.in: Check for off_t, size_t, and ssize_t.

2002-04-07  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-utils.c (g_mime_utils_uuencode_close): Fixed a bug that
	crept in during my simplification.

2002-04-02  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-message.c (g_mime_message_add_recipients_from_string):
	Destroy the temporary addrlist.

2002-03-29  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Detect the iconv-friendly formats for iso charsets
	at configure time and dump them into iconv-detect.h for use in
	gmime-charset.c.

	* gmime-charset.c: Updated to use iconv-detect.h if it exists.

2002-03-23  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-param.c (rfc2184_decode): Don't bother using
	g_mime_charset_name here either because g_mime_iconv_open does it
	for us.
	(encode_param): And again here.

	* gmime-utils.c (rfc2047_decode_word): Don't bother with a
	charenc, we don't need to get the iconv-friendly
	name. g_mime_iconv_open does that for us.