@@ -37,6 +37,7 @@ typedef enum {
         GMIME_PART_ENCODING_DEFAULT,
         GMIME_PART_ENCODING_7BIT,
         GMIME_PART_ENCODING_8BIT,
+	GMIME_PART_ENCODING_BINARY,
         GMIME_PART_ENCODING_BASE64,
         GMIME_PART_ENCODING_QUOTEDPRINTABLE,
 	GMIME_PART_ENCODING_UUENCODE,
